test/files/neg/annotated-literal-annotation-arg.check
annotated-literal-annotation-arg.scala:14: error: $foo
  implicitly[Foo]
            ^
annotated-literal-annotation-arg.scala:15: error: bar
  implicitly[Bar]
            ^
2 errors
